--- a/styles/loading.module.css
+++ b/styles/loading.module.css
@@ -1,49 +1,45 @@
 .loader {
-    position: relative;
-    width: 200px;
-    height: 200px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  position: relative;
+  width: 200px;
+  height: 200px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .loader h2 {
-    color: black;
-    font-size: 500;
-
+  color: white;
+  font-size: 500;
 }
- 
+
 .loader span {
-    position:
-        absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    border: 2px solid blue;
-    pointer-events: none;
-    animation: animate 5s linear infinite;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: 2px solid blue;
+  pointer-events: none;
+  animation: animate 5s linear infinite;
 }
 .loader span:nth-child(1) {
-    border-radius: 38% 62% 64% 36% / 43% 35% 65% 57% ;
+  border-radius: 38% 62% 64% 36% / 43% 35% 65% 57%;
 }
 .loader span:nth-child(2) {
-    animation-direction: reverse;
-    border-radius: 31% 69% 37% 63% / 54% 56% 44% 46% ;
+  animation-direction: reverse;
+  border-radius: 31% 69% 37% 63% / 54% 56% 44% 46%;
 }
 .loader span:nth-child(3) {
-    animation-duration: 3s;
-    border-radius: 82% 18% 58% 42% / 47% 72% 28% 53% ;
+  animation-duration: 3s;
+  border-radius: 82% 18% 58% 42% / 47% 72% 28% 53%;
 }
 
 @keyframes animate {
-    0% {
-        transform: rotate(0deg);
-    }
+  0% {
+    transform: rotate(0deg);
+  }
 
-    100% {
-        transform: rotate(360deg);
-    }
-
-
+  100% {
+    transform: rotate(360deg);
+  }
 }
