--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,6 +1,7 @@
 html,
 body {
   padding: 0;
+  background-color: black;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
@@ -13,6 +14,7 @@ a {
 
 * {
   box-sizing: border-box;
+
 }
 
 aside.emoji-picker-react {
